The define is remote_keymap - good place for a typo that.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21412 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -312,7 +312,7 @@
 % Cheers for the usenet helping me building this up :)
 
 % btnmap is set to be either two or three columns wide depending on whether
-% remote_kaymap is defined in the platform file for the target in question.
+% remote_keymap is defined in the platform file for the target in question.
 % If it is, then every button table needs to have three columns of the form
 % Main Unit Key  &  Remote Key  &  Description \\
 % or the manual will fail to build.  For some reason, it doesn't seem possible
