Deprecate the string made unnecessary in r21414
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21415 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -1888,16 +1888,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
+  desc: deprecated
   user: core
   <source>
-    *: "Enable Replaygain"
+    *: ""
   </source>
   <dest>
-    *: "Enable Replaygain"
+    *: ""
   </dest>
   <voice>
-    *: "Enable Replaygain"
+    *: ""
   </voice>
 </phrase>
 <phrase>
