Remove the setting from the list as well
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21420 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -143,9 +143,8 @@
     }
 %
     \opt{swcodec}{
-      replaygain    & on, off           & N/A\\
       replaygain type
-                    & track, album, track shuffle
+                    & track, album, track shuffle, off
                                         & N/A\\
       replaygain noclip
                     & on, off           & N/A\\
