--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -202,7 +202,7 @@
 \newcommand{\taghead}{\textbf{Tag} & \textbf{Description} \\\midrule}
 
 % environment intended to be used with tag maps (for wps)
-% usage: \begin{tagmap}{caption}{label} Tag & Description \\ \end{btnmap}
+% usage: \begin{tagmap}{caption}{label} Tag & Description \\ \end{tagmap}
 % Note: this automatically sets the table lines.
 % Note: you *need* to terminate the last line with a linebreak \\
 % Note: you still need to enclose this with \begin{table} / \end{table}
