--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -10,7 +10,7 @@
   & Directory & \emph{none} & Enter the directory \\
 \includegraphics[width=0.37cm]{appendix/images/icon-audio-file.png} 
   & Audio file & 
-  \opt{MASCODEC}{\fname{.mp2, .mp3}}%
+  \opt{masd,masf}{\fname{.mp2, .mp3}}%
   \opt{swcodec}{\emph{various}\newline%
   (see \ref{ref:Supportedaudioformats}})%
   % do NOT use \reference{} here as that will break the table.
@@ -55,7 +55,7 @@
  \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png}
  & Video & \fname{.mpg, .mpeg, .mpv, .m2v} & Play the MPEG1/2 video \\
 }
-\opt{MASCODEC}{\opt{lcd_bitmap}{
+\opt{masf}{\opt{lcd_bitmap}{
   \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png} 
     & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
 }
