--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -69,7 +69,7 @@ you to configure settings related to audio playback.
     This can happen if the \dap{} is knocked, shaken or jogged heavily while
     Rockbox is trying to read the hard drive.
 
-    \opt{MASCODEC}{
+    \opt{masd,masf}{
       The anti-skip buffer can be set to a value between 0 and 7
       seconds.
     }
