--- a/manual/configure_rockbox/recording_settings.tex
+++ b/manual/configure_rockbox/recording_settings.tex
@@ -6,7 +6,7 @@
       where you want to store them in the \setting{File Browser} and select
       \setting{Set As Recording Directory}.}
 
-\opt{MASCODEC}{
+\opt{masf}{
   \section{Quality}
     Choose the quality here (0 to 7). Default is 5, best quality is 7,
     smallest file size is 0. This setting effects how much your sound
@@ -46,7 +46,7 @@
   \section{Frequency}
    \nopt{sansa}{
     Choose the recording frequency (sample rate).
-    \opt{MASCODEC}{48kHz, 44.1kHz, 32kHz, 24kHz, 22.05kHz, 16kHz}
+    \opt{masf}{48kHz, 44.1kHz, 32kHz, 24kHz, 22.05kHz, 16kHz}
     \opt{h100,h300}{44.1kHz, 22.05kHz and 11.025kHz}
     \opt{x5}{88.2kHz, 44.1kHz, 22.05kHz and 11.025kHz}
     are available. Higher sample rates use up more disk space, but give better
@@ -54,7 +54,7 @@
     \opt{swcodec}{\note{The 11.025kHz setting is not available when using%
       \setting{MPEG Layer 3} format.}
     }%
-    \opt{MASCODEC}{
+    \opt{masf}{
       The frequency setting also determines which version of the MPEG standard
       the sound is recorded using:\\
       MPEG v1 for 48, 44.1 and 32\\
@@ -87,7 +87,7 @@
     setting to configure how the mono signal is created. Options are L, R and L+R.
 }
 
-\opt{MASCODEC}{
+\opt{masf}{
   \section{Independent Frames}
     The independent frames option tells the \dap{} to encode with the bit
     reservoir disabled, so the frames are independent of each other. This
