--- a/manual/main_menu/fmradio.tex
+++ b/manual/main_menu/fmradio.tex
@@ -15,7 +15,7 @@
   This menu option switches to the radio screen.
   The FM radio has the ability \opt{recording}{to record and } to
   remember station frequency settings (presets).
-  \opt{MASCODEC}{\note{The radio will shorten battery life, because the
+  \opt{masf}{\note{The radio will shorten battery life, because the
       MAS-chip is set to record mode for instant recordings.}
   }
 
