Deprecate LANG_REPLAYGAIN_ENABLE in all languages, which r21415 failed to do.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21437 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/bulgarian.lang
+++ b/apps/lang/bulgarian.lang
@@ -9299,16 +9299,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Включване на replaygain"
+    *: none
   </dest>
   <voice>
-    *: ""
+    *: none
   </voice>
 </phrase>
 <phrase>
