--- a/apps/lang/chinese-trad.lang
+++ b/apps/lang/chinese-trad.lang
@@ -2811,16 +2811,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "開啟Replaygain"
+    *: none
   </dest>
   <voice>
-    *: "Enable Replaygain"
+    *: none
   </voice>
 </phrase>
 <phrase>
