--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -8172,16 +8172,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Habilitar unificación de volumen"
+    *: none
   </dest>
   <voice>
-    *: "Habilitar unificación de volumen"
+    *: none
   </voice>
 </phrase>
 <phrase>
