--- a/apps/lang/finnish.lang
+++ b/apps/lang/finnish.lang
@@ -2812,16 +2812,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Käytä soittovahvistusta"
+    *: none
   </dest>
   <voice>
-    *: "Käytä soittovahvistusta"
+    *: none
   </voice>
 </phrase>
 <phrase>
