--- a/apps/lang/islenska.lang
+++ b/apps/lang/islenska.lang
@@ -2217,16 +2217,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable replaygain"
+    *: none
   </source>
   <dest>
-    *: "Nota sjálfvirka hljóðstyrkni"
+    *: none
   </dest>
   <voice>
-    *: ""
+    *: none
   </voice>
 </phrase>
 <phrase>
