--- a/apps/lang/magyar.lang
+++ b/apps/lang/magyar.lang
@@ -1797,16 +1797,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Hangerő-kiegyenlítés bekapcsolása"
+    *: none
   </dest>
   <voice>
-    *: "Enable replaygain"
+    *: none
   </voice>
 </phrase>
 <phrase>
