--- a/apps/lang/portugues-brasileiro.lang
+++ b/apps/lang/portugues-brasileiro.lang
@@ -1815,16 +1815,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Habilitar Ganho de Repetição"
+    *: none
   </dest>
   <voice>
-    *: "Habilitar Ganho de Repetição"
+    *: none
   </voice>
 </phrase>
 <phrase>
