--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -1798,16 +1798,16 @@
 </phrase>
 <phrase>
  id: LANG_REPLAYGAIN_ENABLE
- desc: in replaygain
- user: core
+  desc: deprecated
+  user:
  <source>
-    *: "Enable Replaygain"
+    *: none
  </source>
  <dest>
-    *: "Magbigay-kaya ulitin ng tubo"
+    *: none
  </dest>
  <voice>
-    *: "Enable Replaygain"
+    *: none
  </voice>
 </phrase>
 <phrase>
