--- a/apps/lang/czech.lang
+++ b/apps/lang/czech.lang
@@ -1800,16 +1800,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Zapnout normalizaci hlasitosti"
+    *: none
   </dest>
   <voice>
-    *: "Zapnout normalizaci hlasitosti"
+    *: none
   </voice>
 </phrase>
 <phrase>
