--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -1846,16 +1846,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Activer ReplayGain"
+    *: none
   </dest>
   <voice>
-    *: "Activer replaygain"
+    *: none
   </voice>
 </phrase>
 <phrase>
