--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -1802,16 +1802,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "הגברה חוזרת פעילה"
+    *: none
   </dest>
   <voice>
-    *: "Enable Replaygain"
+    *: none
   </voice>
 </phrase>
 <phrase>
