--- a/apps/lang/hindi.lang
+++ b/apps/lang/hindi.lang
@@ -934,16 +934,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Replaygain चालू करो"
+    *: none
   </dest>
   <voice>
-    *: "Replaygain चालू करो"
+    *: none
   </voice>
 </phrase>
 <phrase>
