--- a/apps/lang/korean.lang
+++ b/apps/lang/korean.lang
@@ -2823,16 +2823,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "리플레이게인 사용"
+    *: none
   </dest>
   <voice>
-    *: "리플레이게인 사용"
+    *: none
   </voice>
 </phrase>
 <phrase>
