--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -1822,16 +1822,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Włącz Replaygain"
+    *: none
   </dest>
   <voice>
-    *: "Włącz riplejgejn"
+    *: none
   </voice>
 </phrase>
 <phrase>
