--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -2637,16 +2637,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Включить усиление"
+    *: none
   </dest>
   <voice>
-    *: "Включить усиление"
+    *: none
   </voice>
 </phrase>
 <phrase>
