--- a/apps/lang/svenska.lang
+++ b/apps/lang/svenska.lang
@@ -1821,16 +1821,16 @@
 </phrase>
 <phrase>
   id: LANG_REPLAYGAIN_ENABLE
-  desc: in replaygain
-  user: core
+  desc: deprecated
+  user:
   <source>
-    *: "Enable Replaygain"
+    *: none
   </source>
   <dest>
-    *: "Aktivera volymutjämning"
+    *: none
   </dest>
   <voice>
-    *: "Aktivera volymutjämning"
+    *: none
   </voice>
 </phrase>
 <phrase>
