--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -15,7 +15,7 @@ in the font package at \url{http://www.rockbox.org/daily.shtml}.}
   be loaded automatically every time you start up, it must be located in the
   \fname{/.rockbox/fonts} directory and the filename must be at most 24 characters
   long. You can browse the fonts in \fname{/.rockbox/fonts} under
-  \setting{Settings $\rightarrow$ Theme Settings $\rightarrow$ Browse Fonts}
+  \setting{Settings $\rightarrow$ Theme Settings $\rightarrow$ Font}
   in the \setting{Main Menu}.
   \note{Advanced Users Only: Any BDF font file up to 16 pixels high should
     be usable with Rockbox. To convert from \fname{.bdf} to \fname{.fnt}, use
@@ -96,7 +96,7 @@ file find the instructions on the Rockbox website:
   \fname{/.rockbox/themes} directory and then activate the config file
   from the menu as normal
   (\setting{Settings} $\rightarrow$ \setting{Theme Settings}%
-  $\rightarrow$ \setting{Browse Themes}).
+  $\rightarrow$ \setting{Browse Theme Files}).
 
   \subsubsection{Editing}
   The built-in \setting{Text Editor} (see \reference{sec:text_editor})
@@ -142,7 +142,7 @@ file find the instructions on the Rockbox website:
   displaying Track name, Artist, Album etc. in the default font as a purely
   text based layout. There are a number of WPS files included in Rockbox, and
   you can load one of these at any time by selecting it in
-  \setting{Settings $\rightarrow$ Theme Settings $\rightarrow$ Browse .wps files}.
+  \setting{Settings $\rightarrow$ Theme Settings $\rightarrow$ While Playing Screen}.
   \opt{HAVE_REMOTE_LCD}{There is a related option to browse \fname{.rwps} 
     files for \daps{} with LCD remote controls installed. This will load a 
     similar WPS screen for the remote.}
