--- a/manual/configure_rockbox/theme_settings.tex
+++ b/manual/configure_rockbox/theme_settings.tex
@@ -3,7 +3,7 @@ The \setting{Theme Settings} menu offers options that you can change to
 customize the visual apperance of Rockbox.
 
 \begin{description}
-\item[Browse Themes.]
+\item[Browse Theme Files.]
   This option will display all the currently installed themes on the \dap{}, 
   press \ActionTreeEnter{} to load the chosen theme and apply it.
 
@@ -31,12 +31,12 @@ customize the visual apperance of Rockbox.
     \reference{ref:CreateYourOwnWPS} for more details.}
 
 \opt{lcd_bitmap}{
-  \item[Browse Fonts.]
+  \item[Font.]
     Browse the installed fonts on your \dap{}. Selecting one will activate it.
     See \reference{ref:Loadingfonts} for further details about fonts.
 } % \nopt{player}
 
-\item[Browse WPS files.]
+\item[While Playing Screen.]
   Opens the \setting{File Browser} in the \fname{/.rockbox/wps} directory and
   displays all \fname{.wps} files. Selecting one will activate it, stop will
   exit back to the menu. For further information about the WPS see 
@@ -44,7 +44,7 @@ customize the visual apperance of Rockbox.
   \reference{ref:ConfiguringtheWPS}.
 
 \opt{HAVE_REMOTE_LCD}{
-  \item[Browse RWPS files.]
+  \item[Remote While Playing Screen.]
     Opens the \setting{File Browser} in the \fname{/.rockbox/wps} directory and
     displays all \fname{.rwps} files. Selecting one will activate it, stop will
     exit back to the menu.
